--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:front": "vite",
     "dev:back": "nodemon server.js",
     "build": "vite build",
+    "start": "npm run dev",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prettier": "prettier --check .",
