--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:front": "vite",
     "dev:back": "nodemon server.js",
     "build": "vite build",
-    "start": "vite preview",  // Добавляем правильную команду
+    "start": "node server.js",  // Правильная команда для запуска сервера
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "prettier": "prettier --c .",
     "prettier:fix": "prettier --w ."
